--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "private": "true",
+  "browserslist": [
+    "> 1%"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "encore dev-server --hot",
@@ -14,7 +17,10 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
     "babel-preset-es2017": "^6.24.1",
+    "html-webpack-inline-source-plugin": "0.0.10",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.2",
     "webpack-notifier": "^1.6.0"
   }
