--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2017": "^6.24.1",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-polyfill-io-plugin": "^1.0.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.2",
