--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@symfony/webpack-encore": "^0.20.1",
     "babel-preset-es2017": "^6.24.1",
+    "favicons-webpack-plugin": "0.0.9",
     "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-polyfill-io-plugin": "^1.0.0",
