Auto updating project-bar

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-webpack-polyfill-io-plugin": "^1.0.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
+    "qrcodejs2": "0.0.2",
     "sass-loader": "^7.0.2",
     "webpack-notifier": "^1.6.0",
     "webpack-pwa-manifest": "^3.6.2"
