--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "encore dev-server",
+    "start": "encore dev-server --port 8081",
     "build": "encore production"
   },
   "keywords": [],
