--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-loader": "^2.1.5",
     "qrcodejs2": "0.0.2",
     "sass-loader": "^7.0.2",
+    "webpack-dotenv-plugin": "^2.0.2",
     "webpack-notifier": "^1.6.0"
   }
 }
