Open graph tags + .env var for Google Analytics

--- a/.env.dist
+++ b/.env.dist
@@ -2,4 +2,6 @@ API_WS_SCHEME=ws
 API_HTTP_SCHEME=http
 API_ENDPOINT=localhost:8080
 WS_SUFFIX=/
+URL=http://localhost:8081
+GOOGLE_ANALYTICS_TAG=UA-YOURTAG-1
 BETA=true
